--- a/package.json
+++ b/package.json
@@ -25,10 +25,12 @@
   },
   "homepage": "https://github.com/ssdik862/lsons#readme",
   "devDependencies": {
+    "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
     "@types/faker": "^5.5.9",
     "@types/lowdb": "^1.0.11",
+    "@types/morgan": "^1.9.3",
     "@types/node": "^16.11.6",
     "@types/node-cache": "^4.2.5",
     "@typescript-eslint/eslint-plugin": "^5.3.1",
@@ -45,12 +47,16 @@
     "typescript": "^4.4.4"
   },
   "dependencies": {
+    "dotenv": "^10.0.0",
+    "ejs": "^3.1.6",
     "express": "^4.17.1",
     "express-session": "^1.17.2",
     "faker": "^5.5.3",
     "lowdb": "^3.0.0",
+    "morgan": "^1.10.0",
     "nanoid": "^3.1.30",
     "node-cache": "^5.1.2",
-    "node-fetch": "^3.1.0"
+    "node-fetch": "^3.1.0",
+    "socket.io": "^4.4.0"
   }
 }
