--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
   },
   "homepage": "https://github.com/ssdik862/lsons#readme",
   "devDependencies": {
+    "@types/dotenv": "^8.2.0",
     "@types/ejs": "^3.1.0",
     "@types/express": "^4.17.13",
     "@types/express-session": "^1.17.4",
